force-app/main/default/objects/Address__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <formula>Street__c &amp;&quot;  &quot;&amp; City__c &amp;&quot;, &quot;&amp;  TEXT(State__c)  &amp;&quot; &quot;&amp; ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MailingAddress</label>
    <type>Text</type>
</CustomField>