force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <inlineHelpText>Enter Street</inlineHelpText>
    <label>Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>