force-app/main/default/objects/Address__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <inlineHelpText>Enter ZIP CODE</inlineHelpText>
    <label>ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>